...
        context.read<VariablesInfo>().changeExpanded(!isExpanded, index);
      },
      children: [
        ExpansionPanel(
          headerBuilder: (BuildContext context, bool isExpanded) {
            return ListTile(
              key: Key("url"),
              title: Text("URL recipe:", style: fontStyle3),
            );
          },
          body: ListTile(
            title: Text(
              data.source.toString(),
              key: Key("url2"),
            ),
            onTap: ((() async {
              launchUrl(Uri.parse(data.sourceUrl.toString()));
            })),
          ),
          isExpanded: context.watch<VariablesInfo>().items[0],
...
